Fix chat bar getting cut off and remove always on top property from win

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -88,5 +88,5 @@ html, body {
   flex: row nowrap;
   justify-content: center;
   width: 100%;
-  height: 105vh;
+  height: calc(100% - 40px);
 }
